--- a/Source/TeduShop.Web/TeduShop.Web.csproj
+++ b/Source/TeduShop.Web/TeduShop.Web.csproj
@@ -5135,6 +5135,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Pages\NewsDetails\detail.css" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
