--- a/Source/TeduShop.Web/AppSettings.config
+++ b/Source/TeduShop.Web/AppSettings.config
@@ -12,7 +12,7 @@
   <add key="FromEmailPassword" value="3Muigiapcong$"/>
   <add key="FromName" value="TEDU"/>
   <add key="AdminEmail" value="ngoctoan89@gmail.com"/>
-  <add key="CurrentLink" value="http://localhost:55429/"/>
+  <add key="CurrentLink" value="http://113.22.60.182/"/>
   <add key="EnableBundles" value="false"/>
   <!--Setting Ngan Luong payment-->
   <add key="MerchantId" value="46838"/>
