--- a/Source/TeduShop.Web/Web.config
+++ b/Source/TeduShop.Web/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="botDetect" requirePermission="false" type="BotDetect.Configuration.BotDetectConfigurationSection, BotDetect" />
+    <!--<section name="botDetect" requirePermission="false" type="BotDetect.Configuration.BotDetectConfigurationSection, BotDetect" />-->
   </configSections>
   <connectionStrings configSource="ConnectionStrings.config">
   </connectionStrings>
@@ -16,21 +16,21 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <httpHandlers>
+    <!--<httpHandlers>
       <add verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
     </httpHandlers>
     <sessionState mode="InProc" cookieless="AutoDetect" timeout="20" sessionIDManagerType="BotDetect.Web.CustomSessionIdManager, BotDetect" />
     <pages enableSessionState="true">
       <controls>
         <add assembly="BotDetect" namespace="BotDetect.Web.UI" tagPrefix="BotDetect" />
-      </controls>
-    </pages>
+      </controls>-->
+    <!--</pages>-->
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="WebDAVModule" />
+      <!--<remove name="WebDAVModule" />-->
     </modules>
-    <handlers>
+    <!--<handlers>
       <remove name="WebDAV" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -38,7 +38,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <remove name="BotDetectCaptchaHandler" />
       <add name="BotDetectCaptchaHandler" preCondition="integratedMode" verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
-    </handlers>
+    </handlers>-->
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
@@ -99,7 +99,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <botDetect helpLinkEnabled="true" helpLinkMode="image" />
+  <!--<botDetect helpLinkEnabled="true" helpLinkMode="image" />-->
   <system.codedom>
   	<compilers>
   		<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
